--- a/src/app/gestions/components/voyage-list/voyage-list.component.html
+++ b/src/app/gestions/components/voyage-list/voyage-list.component.html
@@ -1,98 +1,62 @@
-<div class="grid__wrapper">
+<a  class="btn btn-sm btn-success text-white" routerLink="/home/AddOrEditvoyage"><i class="fa fa-plus"></i> Add Voyage</a>
 
-    <div class="sample__header">
-        <div class="switch-sample">
+<div  style="text-align:center" class="ex-container">
 
-            <h5 class="switch-sample__title">Boston Marathon 2018</h5>
-            <igx-switch [(ngModel)]="live" [disabled]="isFinished" title="Start/Stop the marathon"> <span class="switch-sample__label">Live</span>
-            </igx-switch>
+<table class='table table-borderless' >
+    <tr>
+        <th><input type="text" [(ngModel)]="id"  (input)="SearshID()"/> </th>
+        <th><input type="text" [(ngModel)]="idVoyage"  (input)="Searsh()"/> </th>
+        <th> <input type="text" [(ngModel)]="MatriculeT"  (input)="SearshByMatricule()"/> </th>
+        <th><input type="text" [(ngModel)]="MatriculeR"  (input)="SearshR()"/> </th>
+        <th> <input type="text" [(ngModel)]="Conducteur"  (input)="SearshCond()"/></th>
+      </tr>
+  <thead class="thead-light">
+  <tr>
+    <th sortable="ID" (sort)="onSort($event)"> ID</th>
+    <th scope="col" sortable="idVoyage" (sort)="onSort($event)"> Code Voyage</th>
+    <th scope="col" sortable="MatriculeT" (sort)="onSort($event)"> Matricule Tracteur</th>
+    <th scope="col" sortable="MatriculeR" (sort)="onSort($event)" > Matricule Remorque</th>
+    <th  sortable="Conducteur" (sort)="onSort($event)"> Conducteur</th>
+  </tr>
+</thead>
+  <tr *ngFor="let item of voyages | paginate: config">
+    <td>{{ item.ID}}</td>
+    <td>{{ item.idVoyage }}</td>
+    <td>{{ item.MatriculeT}}</td>
+    <td>{{ item.MatriculeR}}</td>
+    <td>{{ item.Conducteur}}</td>
+
+  </tr>
+</table>
+<!-- <pagination-controls (pageChange)="pageChanged($event)"
+[maxSize]="maxSize"
+[directionLinks]="directionLinks"
+[autoHide]="autoHide"
+[responsive]="responsive"
+[previousLabel]="labels.previousLabel"
+[nextLabel]="labels.nextLabel"
+[screenReaderPaginationLabel]="labels.screenReaderPaginationLabel"
+[screenReaderPageLabel]="labels.screenReaderPageLabel"
+[screenReaderCurrentLabel]="labels.screenReaderCurrentLabel"
+></pagination-controls> -->
+<pagination-template #p="paginationApi" [id]="config.id" (pageChange)="config.currentPage = $event">
+    <div class="custom-pagination">
+      <div class="pagination-previous" [class.disabled]="p.isFirstPage()">
+        <span *ngIf="!p.isFirstPage()" (click)="p.previous()">
+          <
+            </span>
         </div>
-        <igx-input-group>
-            <input class="gridSample__filter" igxInput type="text" placeholder="Filter by country" (input)="filter($event.target.value)">
-        </igx-input-group>
+        <div class="page-number" *ngFor="let page of p.pages" [class.current]="p.getCurrent() === page.value">
+              <span (click)="p.setCurrent(page.value)" *ngIf="p.getCurrent() !== page.value">{{ page.label }}</span>
+            <div *ngIf="p.getCurrent() === page.value">
+              <span>{{ page.label }}</span>
+            </div>
+        </div>
+        <div class="pagination-next" [class.disabled]="p.isLastPage()">
+          <span *ngIf="!p.isLastPage()" (click)="p.next()"> > </span>
+        </div>
     </div>
 
-    <igx-grid #grid1 [data]="localData" [paging]="true" [perPage]="10" height="600px" (onSelection)="cellSelection($event)" [allowFiltering]="true">
-        <igx-column header="Rank" headerClasses="myClass" width="115px" field="Id" sortable="true" [filterable]="false">
-            <ng-template igxCell let-cell="cell">
-                <div class="cell__inner">
-                    <div>{{ cell.value }}</div>
-                    <ng-container *ngIf="isTop3(cell)">
-                        <span class="cup" *ngIf="cell.value === 1">
-                            <img src="https://www.infragistics.com/angular-demos/assets/images/grid/trophy_gold.svg" alt="golf-trophy" />
-                        </span>
-                        <span class="cup" *ngIf="cell.value === 2">
-                            <img src="https://www.infragistics.com/angular-demos/assets/images/grid/trophy_silver.svg" alt="silve-trophy" />
-                        </span>
-                        <span class="cup" *ngIf="cell.value === 3">
-                            <img src="https://www.infragistics.com/angular-demos/assets/images/grid/trophy_bronze.svg" alt="bronze-trophy" />
-                        </span>
-                    </ng-container>
-                </div>
-            </ng-template>
-        </igx-column>
-
-        <igx-column field="Name" header="Athlete" width="280">
-            <ng-template igxCell let-cell="cell">
-                <div class="cell__inner">
-                    <igx-avatar [src]="cell.row.rowData.Avatar" roundShape="true" size="small"> </igx-avatar><span
-                        class="athlete_name">{{ cell.value }}</span>
-                    <igx-badge *ngIf="live" [type]="getBadgeType(cell)" [icon]="getIconType(cell)"></igx-badge>
-                </div>
-
-            </ng-template>
-        </igx-column>
-
-        <igx-column field="Speed" header="Speed" [width]="'190px'" [filterable]="false">
-            <ng-template igxCell let-val>
-                <igx-sparkline height="40px" width="180px"
-                    [dataSource]="val"
-                    valueMemberPath="Speed"
-                    displayType="Line"
-                    minimum="0"
-                    lineThickness="2"
-                    brush="rgb(0, 153, 255)">
-                </igx-sparkline>
-            </ng-template>
-        </igx-column>
-
-        <igx-column field="BeatsPerMinute" header="Beats per minute" [hasSummary]="true" dataType="number" [summaries]="bnpSummary"
-            [hidden]="hideBeatsPerMinute" [filterable]="false">
-            <ng-template igxCell let-val>
-                <div class="cell__inner">
-                    {{ val }}
-                </div>
-            </ng-template>
-        </igx-column>
-
-        <igx-column field="TopSpeed" header="Top Speed" width="120px" dataType="number" [hasSummary]="true" [summaries]="topSpeedSummary"
-            [filterable]="false">
-
-            <ng-template igxCell let-val>
-                <div class="cell__inner">
-                    {{ val | number: '1.1-5' }}
-                </div>
-            </ng-template>
-
-        </igx-column>
-
-        <igx-column field="TrackProgress" sortable="true" header="Track Progress" [filterable]="false">
-            <ng-template igxCell let-val>
-                <div class="linear-bar-container">
-                    <igx-linear-bar [textVisibility]="false" class="cell__inner_2" [value]="val"></igx-linear-bar>
-                </div>
-            </ng-template>
-        </igx-column>
-
-        <igx-column field="CountryName" hidden="true"></igx-column>
-        <igx-column field="CountryFlag" header="Country" width="90px" [filterable]="false">
-            <ng-template igxCell let-cell="cell">
-                <div class="cell__inner_2">
-                    <span>
-                        <img [src]="cell.value" class="flag" />
-                    </span>
-                </div>
-            </ng-template>
-        </igx-column>
-    </igx-grid>
+  </pagination-template>
+  <div class="fab" routerLink="/home/AddOrEditvoyage/personal"> + </div>
 </div>
