--- a/src/app/modules/navigation/components/nav/nav.component.html
+++ b/src/app/modules/navigation/components/nav/nav.component.html
@@ -6,16 +6,19 @@
     <mat-toolbar >Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/home/dashboard"><mat-icon matListIcon class="app-nav-list-icon"><i class="fa fa-pencil"></i></mat-icon>Dashboard</a>
-      <a mat-list-item routerLink="/home/vehiculeslist">Vehicules</a>
-      <a mat-list-item routerLink="/home/conducteurslist">Conducteurs</a>
+      <a mat-list-item routerLink="/home/vehiculeslist"> <mat-icon matListIcon class="app-nav-list-icon"><i class="fa fa-car"></i></mat-icon> Vehicules</a>
+      <a mat-list-item routerLink="/home/conducteurslist"><mat-icon matListIcon class="app-nav-list-icon"><i class="fa fa-user"></i></mat-icon>Conducteurs</a>
       <a mat-list-item routerLink="/home/voyagelist">Operations</a>
+      <a mat-list-item routerLink="/home/facturation">Facturation</a>
       <a mat-list-item routerLink="/home/table">Table</a>
       <a mat-list-item routerLink="/home/address">Address</a>
       <a mat-list-item routerLink="/home/dragdrop">Drag and Drop</a>
+      <a mat-list-item (click)="drawer.toggle()" ><mat-icon matListIcon class="app-nav-list-icon"><i class="fa fa-close"></i></mat-icon>Close</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+      <div style="height: 88vh;">
+<!--     <mat-toolbar color="primary">
       <button
         type="button"
         aria-label="Toggle sidenav"
@@ -25,8 +28,36 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>PAS19</span>
+    </mat-toolbar> -->
+    <mat-toolbar color="primary">
+      <mat-toolbar-row>
+        <button mat-icon-button>
+          <mat-icon (click)="drawer.toggle()">menu</mat-icon>
+        </button>
+        <span>PAS19 -</span>
+        <h1>SimpleCRM</h1>
+        <span class="menu-spacer"></span>
+        <div>
+          <a mat-button [routerLink]="'/accounts'"> Operations </a>
+          <a mat-button [routerLink]="'/create-operation'"> Fait Operation </a>
+          <a mat-button [routerLink]="'/vehicules'"> Vehicules </a>
+          <a mat-button [routerLink]="'/create-vehicule'"> Create Vehicule </a>
+          <a mat-button [routerLink]="'/conducteurs'"> Conducteurs </a>
+          <a mat-button [routerLink]="'/create-conducteur'"> Create conducteur </a>
+          <a mat-button [routerLink]="'/activities'"> Activities </a>
+          <a mat-button [routerLink]="'/create-activity'"> Create Activity </a>
+          <a mat-button [routerLink]="'/facturation'"> Facturation </a>
+    
+        </div>
+      </mat-toolbar-row>
+    
+      <mat-toolbar-row>
+          <span style="font-size: 12px;">SimpleCRM helps you easily manage your business</span>
+        </mat-toolbar-row>
     </mat-toolbar>
+    
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
